--- a/test/res/values/strings.xml
+++ b/test/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">test</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="calltest">拨打电话测试工程</string>
+    <string name="Button">Button</string>
 
 </resources>
